--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,7 +12,7 @@
 .cards-menu{
   display: grid;
   margin-top: 80px;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 24px;
   grid-row-gap: 16px;
